Fixed misalignment of profile empty message

--- a/client/sass/pages/_profile.scss
+++ b/client/sass/pages/_profile.scss
@@ -214,7 +214,8 @@ $placeholderColor: #7a7a7a;
 		margin-left: $profileBarWidth;
 	}
 	.emptyMessage {
-		margin-left: $profileBarWidth;
+		@include box-sizing(border-box);
+		padding-left: $profileBarWidth;
 		height: 80%;
 	}
 }
